fixed search contrast on home page hero

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -106,8 +106,8 @@
       position: relative;
 
       input {
-        padding: 16px;
-        background-color: transparent;
+        padding: 1rem 2rem 1rem 1rem;
+        background-color: #0303033c;
         outline: none;
         border: 2px solid var(--cl-light);
         border-radius: 8px;
